--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
-        <span id="name">There!</span>
+        <span id="name">Sweetheart</span>
       </h1>
       <p class="two" id="greetingText">Ohhhhhh its 27th December today..!</p>
     </div>
