--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday Jency!!! :)</title>
+  <title>Happy Birthday Dhenu!!! :)</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
@@ -15,16 +15,16 @@
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
-        <span id="name">Sweetheart</span>
+        <span id="name">Princess !!!</span>
       </h1>
-      <p class="two" id="greetingText">Ohhhhhh its 27th December today..!</p>
+      <p class="two" id="greetingText">Ohhhhhh its 2nd March today..!</p>
     </div>
     <div class="three">
       <p>It's your birthday!!!</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! What are some unique gifts for My Love??..</p>
+        <p class="hbd-chatbox">Happy birthday to you!! What are some unique gifts for My Sis??..</p>
         <p class="fake-btn">Search</p>
       </div>
     </div>
@@ -117,13 +117,12 @@
       </svg>
     </div>
     <div class="nine">
-      <p> Today is your special day. I just want you to know that everything 
-      you've given me is so meaningful, and I can't imagine a life without 
-	you. Happy birthday to the love of my life and my future wife. 
-	On this special day of yours, I pray to God to bless you with a 
-	lifetime of happiness and peace. I love you.</p>
-      <p> Sending you lots of love,lots of kisses and lots of hugs today! <p>
-      <p><strong>I really miss you on your special day.</strong></p>
+      <p> On this special day of yours, I pray to God to bless you with a lifetime of happiness and peace. I hope you will always make us honored in every field of life. Stay the same little one! </p>
+      <p>
+     “Cheers to my lovely sister on your birthday! I’ll be raising a glass (of coke ;p) in your honor...or maybe three or four! I really wish we could be together to celebrate! Miss you!” </p>  
+      <p>“The Forbes Billionaire List is totally wrong. I am the richest person in the world because no one else has the love of a wonderful sister like you. Happy birthday, Gorgeous !!”</p>
+     
+      <p> Sending you lots of love, kisses and hugs today! <p>
       <p>Okay, now come back and tell me if you liked it.</p>
       <p id="replay">Or <strong style="text-decoration: underline;">click</strong>, for replay.</p>
       <p class="last-smile">:)</p>
